syn-state-machine/src/common_tokens/path/snapshots/syn_state_machine__common_tokens__path__types__tests__it_matches_bi_path.snap
---
source: syn-state-machine/src/common_tokens/path/types.rs
expression: "crate::parse::<TypePath<Ident>>(::quote::quote! { hello :: world })"
---
Ok(
    (
        TypePath {
            leading: false,
            segments: [
                Simple {
                    id: Id(
                        Ident(
                            hello,
                        ),
                    ),
                },
                Simple {
                    id: Id(
                        Ident(
                            world,
                        ),
                    ),
                },
            ],
        },
        0,
    ),
)
