syn-state-machine/src/common_tokens/path/snapshots/syn_state_machine__common_tokens__path__types__tests__it_matches_fun.snap
---
source: syn-state-machine/src/common_tokens/path/types.rs
expression: "crate::parse::<TypePath<Infallible>>(::quote::quote! { Fn() })"
---
Ok(
    (
        TypePath {
            leading: false,
            segments: [
                TypePathFn {
                    id: Id(
                        Ident(
                            Fn,
                        ),
                    ),
                    path_fn: TypePathFn {
                        args: [],
                        out: None,
                    },
                },
            ],
        },
        0,
    ),
)
