syn-state-machine/src/common_tokens/path/snapshots/syn_state_machine__common_tokens__path__types__tests__it_matches_fun_ret.snap
---
source: syn-state-machine/src/common_tokens/path/types.rs
expression: "crate::parse::<TypePath<Paren<()>>>(::quote::quote! { Fn() -> () })"
---
Ok(
    (
        TypePath {
            leading: false,
            segments: [
                TypePathFn {
                    id: Id(
                        Ident(
                            Fn,
                        ),
                    ),
                    path_fn: TypePathFn {
                        args: [],
                        out: Some(
                            Paren(
                                (),
                            ),
                        ),
                    },
                },
            ],
        },
        0,
    ),
)
