syn-state-machine/src/common_tokens/path/snapshots/syn_state_machine__common_tokens__path__types__tests__it_matches_long_generic.snap
---
source: syn-state-machine/src/common_tokens/path/types.rs
expression: "crate::parse::<TypePath>(::quote::quote! { hello :: < Hi > })"
---
Ok(
    (
        TypePath {
            leading: false,
            segments: [
                Generic {
                    id: Id(
                        Ident(
                            hello,
                        ),
                    ),
                    generic_args: GenericArgs(
                        [
                            Type(
                                NoBounds(
                                    TypePath(
                                        TypePath {
                                            leading: false,
                                            segments: [
                                                Simple {
                                                    id: Id(
                                                        Ident(
                                                            Hi,
                                                        ),
                                                    ),
                                                },
                                            ],
                                        },
                                    ),
                                ),
                            ),
                        ],
                    ),
                },
            ],
        },
        0,
    ),
)
