syn-state-machine/src/common_tokens/path/snapshots/syn_state_machine__common_tokens__path__types__tests__it_matches_short_generic.snap
---
source: syn-state-machine/src/common_tokens/path/types.rs
expression: "crate::parse::<TypePath<Ident>>(::quote::quote! { hello < Hi > })"
---
Ok(
    (
        TypePath {
            leading: false,
            segments: [
                Generic {
                    id: Id(
                        Ident(
                            hello,
                        ),
                    ),
                    generic_args: GenericArgs(
                        [
                            Type(
                                Ident(
                                    Hi,
                                ),
                            ),
                        ],
                    ),
                },
            ],
        },
        0,
    ),
)
