syn-state-machine/src/common_tokens/path/snapshots/syn_state_machine__common_tokens__path__types__tests__it_matches_simple_paths.snap
---
source: syn-state-machine/src/common_tokens/path/types.rs
expression: "parse_terminal::<TypePath>(quote!(hello :: world :: hi)).unwrap()"
---
TypePath {
    leading: false,
    segments: [
        Simple {
            id: Id(
                Ident(
                    hello,
                ),
            ),
        },
        Simple {
            id: Id(
                Ident(
                    world,
                ),
            ),
        },
        Simple {
            id: Id(
                Ident(
                    hi,
                ),
            ),
        },
    ],
}
