syn-state-machine/src/common_tokens/path/snapshots/syn_state_machine__common_tokens__path__types__tests__it_matches_tri_path.snap
---
source: syn-state-machine/src/common_tokens/path/types.rs
expression: "crate::parse::<TypePath<Infallible>>(::quote::quote! { hello :: world :: hi })"
---
Ok(
    (
        TypePath {
            leading: false,
            segments: [
                Simple {
                    id: Id(
                        Ident(
                            hello,
                        ),
                    ),
                },
                Simple {
                    id: Id(
                        Ident(
                            world,
                        ),
                    ),
                },
                Simple {
                    id: Id(
                        Ident(
                            hi,
                        ),
                    ),
                },
            ],
        },
        0,
    ),
)
